--- a/kernal/sales_base.html
+++ b/kernal/sales_base.html
@@ -266,21 +266,19 @@
         if(_checkInputData() == false){ return; }
 		var msg = '';
 		for(var pk in productTable){
-            if ("imei" in productTable[pk]){
-                if(parseInt($("#"+pk+"_quantity").val()) >  1){
-                    reject = true;
-                    reject_msg += "Product: '" + productTable[pk].imei + "' only '1' item in hand \n";                     
-                }
+            product_name = productTable[pk].fields.name
+            if( "imei" in productTable[pk]){
+                product_name = productTable[pk].imei
             }
             if(parseInt($("#"+pk+"_quantity").val()) >  productTable[pk].fields.stockCount){
                 reject = true;
-                reject_msg += "Product: '" + productTable[pk].fields.name + "' only '"+productTable[pk].fields.stockCount+"' item in hand \n"; 
+                reject_msg += "Product: '" + product_name + "' only '"+productTable[pk].fields.stockCount+"' item in hand \n"; 
             }
         
 			var price = parseFloat($("#"+pk+"_price").val());
 			var cost = parseFloat(productTable[pk].fields.cost);
 			if(cost > price){
-				msg += productTable[pk].fields.name + ' PRICE: $'+price+' lower than COST: $'+ cost + ' \n';
+				msg += product_name + ' PRICE: $'+price+' lower than COST: $'+ cost + ' \n';
 			}
 		}
         
