--- a/kernal/search_imei.html
+++ b/kernal/search_imei.html
@@ -2,7 +2,7 @@
 
 {% block searchField %}		  		
 			<div><span class="date"><label for="id_start_date">Start Date: </label> </span><span class="date"> <input id="id_start_date" type="text" class="vDateField" name="start_date" size="10"/> </span><span class="date"> <label for="id_end_date">End Date: </label> </span><span class="date"> <input id="id_end_date" type="text" class="vDateField" name="end_date" size="10"/></span></div> 		
-            <label id="item_label" for="item">    IMEI / Bill No: 
+            <label id="item_label" for="item">    IMEI: 
             </label>  
             <input type="text" name="item" value="" id="item" size="40" onclick="return false;"/>
 {% endblock %}		  			
@@ -10,11 +10,13 @@
 {% block table_head %}		  
             <thead>  
               <tr>  
-                <th style="width:auto">Sale ID
+                <th style="width:auto">ID
                 </th>  
                 <th style="width:auto">Date
                 </th>  
                 <th style="width:15%;">Type
+                </th>                  
+                <th style="width:15%;">mode
                 </th>  
                 <th style="width:15%;">Status
                 </th>  
@@ -27,6 +29,7 @@
                 <tr>
                 <td><a href="/sales/{% if result.type == 'Cash Sales'%}bill{% else %}{{result.type}}{% endif %}/{{result.pk}}">{{result.pk}}</a></td>
                 <td>{{result.create_at}}</td>
+                <td>{{result|classname}}</td>                
                 <td>{{result.type}}</td>
                 <td>{{result.status}}</td>
                 </tr>					
@@ -75,11 +78,19 @@
 
 {% block table_content %}	
     function _genRowByPK(data){
+        link = "/sales/{{display}}/"+data.pk;
+        type = data.fields.type;
+        mode = data.model.replace("kernal.", "");
+        if(data.model == "kernal.instockbatch"){
+            link = "/inventory/result/"+data.pk;
+            type = data.fields.mode;
+        }
         row = ""+
                 "<tr>"+
-                "<td><a href=\"/sales/{{display}}/"+data.pk+"\">"+data.pk+"</a></td>"+
+                "<td><a href=\""+link+"\">"+data.pk+"</a></td>"+
                 "<td>"+data.fields.create_at+"</td>"+
-                "<td>"+data.fields.type+"</td>"+
+                "<td>"+mode+"</td>"+
+                "<td>"+type+"</td>"+
                 "<td>"+data.fields.status+"</td>"+
                 "</tr>"
         ;    
