--- a/kernal/consignment_out_sale_form.html
+++ b/kernal/consignment_out_sale_form.html
@@ -4,7 +4,7 @@
 {% endblock %}
 
 {% block hiddenValue %}
-    <input type="hidden" name="salesMode" value="Consignment_out_sales"/>
+    <input type="hidden" name="mode" value="Consignment_OUT_SALE"/>
 {% endblock %}
 
 {% block title %}
