--- a/kernal/search_gadai.html
+++ b/kernal/search_gadai.html
@@ -2,7 +2,7 @@
 
 {% block searchField %}		  		
 			<div><span class="date"><label for="id_start_date">Start Date: </label> </span><span class="date"> <input id="id_start_date" type="text" class="vDateField" name="start_date" size="10"/> </span><span class="date"> <label for="id_end_date">End Date: </label> </span><span class="date"> <input id="id_end_date" type="text" class="vDateField" name="end_date" size="10"/></span></div> 		
-            <label id="item_label" for="item">    Customer Name: 
+            <label id="item_label" for="item">    IMEI: 
             </label>  
             <input type="text" name="item" value="" id="item" size="40" onclick="return false;"/>
 {% endblock %}		  			
@@ -74,7 +74,7 @@
     function _genRowByPK(data){
         row = ""+
                 "<tr>"+
-                "<td><a href=\"/sales/{{display}}/"+data.pk+"\">"+data.pk+"</a></td>"+
+                "<td><a href=\"/inventory/result/"+data.pk+"\">"+data.pk+"</a></td>"+
                 "<td>"+data.fields.create_at+"</td>"+
                 "<td>"+data.fields.status+"</td>"+
                 "</tr>"
