--- a/kernal/stock_take.html
+++ b/kernal/stock_take.html
@@ -41,7 +41,7 @@
                   <td>{{value.3}}</td>
                   <td>{{value.4}}</td>
                   <td>{{value.5}}</td>
-                  <td>{{value.6}}</td>
+                  <td>{{value.6}}({{value.7}})</td>
               </tr>  			
 			{%endfor%}
             </tbody>  	
