--- a/kernal/report.html
+++ b/kernal/report.html
@@ -21,7 +21,7 @@
    <ol>
       <li>Summary Report
          <ol>
-            <li><a href="/report/daily/filter/"> Daily Sales</a></li>
+            <li><a href="/report/daily_sales/filter/"> Daily Sales</a></li>
             <li><a href="/report/daily/category/filter/"> Daily Sales Summary</a></li>            
             <li><a href="/report/person/filter/">Personal Sales</a></li>
          </ol>
