--- a/kernal/report_daily_sales.html
+++ b/kernal/report_daily_sales.html
@@ -34,17 +34,13 @@
                 </th>  								
                 <th>Date
                 </th>  												
-                <th>
-                </th>  								
-                <th>
-                </th>  								
               </tr>  		
             </thead>  		
             <tbody>  						
 			{%for outstock in outstocks %}
               <tr>  				
                 <td>
-                  <a href="/sales/bill/{{bill.pk}}" target="_blank">{{outstock.pk}}</a></td>  								<td>{{outstock.product}}</td>  								<td>{{outstock.user}}</td>  								<td>{{outstock.tt}}</td>  								<td>{{outstock.bill.mode}}</td>  								<td>{{outstock.create_at}}</td>  								<td></td> 								<td>{{bill.profit}}</td>  								
+                  <a href="/sales/bill/{{bill.pk}}" target="_blank">{{outstock.pk}}</a></td>  <td>{{outstock.product}}</td>  <td>{{outstock.user}}</td>  <td>{{outstock.tt}}</td>  <td>{{outstock.bill.mode}}</td>  <td>{{outstock.create_at}}</td>
               </tr>  			
 			{%endfor%}
             </tbody>  	
