--- a/kernal/report.html
+++ b/kernal/report.html
@@ -23,13 +23,14 @@
          <ol>
             <li><a href="/report/daily_sales/filter/"> Daily Sales</a></li>
             <li><a href="/report/daily/category/filter/"> Daily Sales Summary</a></li>            
-            <li><a href="/report/person/filter/">Personal Sales</a></li>
+            <li><a href="/report/person_sales/filter/">Personal Sales</a></li>
          </ol>
       </li>
       <li>Sales Report
          <ol>
             <li><a href="/sales/cash/filter/"> Cash Sales</a></li>
             <li><a href="/sales/invoice/filter/"> Invoice and Delivery Orders</a></li>
+            <li><a href="/sales/items/filter/"> Item Sales Summary</a></li>
          </ol>
       </li>      
       <li>Return Report
@@ -46,7 +47,16 @@
             <li><a href="/search/service/">Service Report</a></li>
             
          </ol>
-      </li>                  
+      </li>   
+      <li>Commision Report
+         <ol>
+            <li><a href="/report/commission/newhp/filter/">New Handphone</a></li>
+            <li><a href="/report/commission/2ndhp/filter/">2nd Handphone</a></li>
+            <li><a href="/report/commission/gadai/filter/">Gadai</a></li>
+            <li><a href="/report/commission/acc/filter/">Acc</a></li>
+            
+         </ol>
+      </li>          
    </ol>
 </div>
 </div>
