--- a/branches/refactory-1.0/kernal/report_dailySales_by_category.html
+++ b/branches/refactory-1.0/kernal/report_dailySales_by_category.html
@@ -41,22 +41,22 @@ td{
               <tr>  				
                 <th>Sale ID
                 </th>  								
-                {% for title in categorysTitle%}
+                {% for title in tableHeader%}
                     <th>{{title}}</th>  								
                  {% endfor %}
               </tr>  		
             </thead>  		
-            <tbody>  						
-			{%for date, categorys in dateTable %}
-              <tr>  	
-                <td><a href="/report/daily/?start_date={{date}}&end_date={{date}}" target="_blank">{{date}}</a></td> 
-
-                    {% for category in categorys%}
+            <tbody>  			
+			{% for category in categorysTitle %}
+                {% with forloop.counter0 as idx%}
+                <tr>
                     <td>{{category}}</td>
+                    {%for date, categorys in dateTable %}
+                    <td>{{categorys|Get:idx}}</td>
                     {% endfor %}
-                  
-              </tr>  			
-			{%endfor%}
+                </tr>
+                {% endwith %}
+            {% endfor %}
             </tbody>  	
           </table>  
         </div>  
