--- a/kernal/consignment_out_sale_form.html
+++ b/kernal/consignment_out_sale_form.html
@@ -24,3 +24,36 @@
                 }
     });      
 {% endblock %}
+
+{% block ajaxCheckBeforeSend %}
+        var reject = false;
+        reject_msg = "";
+        if(_checkInputData() == false){ return; }
+		var msg = '';
+		for(var pk in productTable){
+            product_name = productTable[pk].fields.name
+            if( "imei" in productTable[pk]){
+                product_name = productTable[pk].imei
+            }
+
+/*  ConsignmentOutSales no need to check stock          
+            if(parseInt($("#"+pk+"_quantity").val()) >  productTable[pk].fields.stockCount){
+                reject = true;
+                reject_msg += "Product: '" + product_name + "' only '"+productTable[pk].fields.stockCount+"' item in hand \n"; 
+            }
+  */      
+			var price = parseFloat($("#"+pk+"_price").val());
+			var cost = parseFloat(productTable[pk].fields.cost);
+			if(cost > price){
+				msg += product_name + ' PRICE: $'+price+' lower than COST: $'+ cost + ' \n';
+			}
+		}
+        
+        if (reject){
+            alert(reject_msg);
+            return;
+        }
+        
+		ans = confirm(msg + " \n Are you sure?");
+		if(!ans){ return; }
+{% endblock %}
