--- a/kernal/consignment_out_balance_form.html
+++ b/kernal/consignment_out_balance_form.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block hiddenValue %}
-    <input type="hidden" name="mode" value="Consignment"/>
+    <input type="hidden" name="mode" value="Consignment_OUT_RETURN"/>
 {% endblock %}
 
 {% block mode_form %}
